fix overflow x

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,25 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 @font-face {
   font-family: PressStart;
   src: url('/fonts/PressStart2P.ttf');
 }
 
+html {
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   background: #000000;
   font-family: PressStart;
-  height: 100vh;
-  width: 100vw;
-  margin: 0px;
+  height: 100%;
+  width: 100%;
 }
 
 header {
